[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sandboxledger"
version = "0.1.0"
description = "Content-addressed run ledger for reproducible agent evaluations."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Dr. Nripanka Das"}]
keywords = ["benchmark", "reproducibility", "agent evaluation", "merkle"]

[project.scripts]
sandboxledger = "sandboxledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
